After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 746299 - Pressing ESC on the search overlay does not cancel the search
Pressing ESC on the search overlay does not cancel the search
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
3.15.x
Other Linux
: Normal major
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-16 15:48 UTC by Ignacio Casal Quinteiro (nacho)
Modified: 2015-03-16 20:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
search hide on Esc hit (1.34 KB, patch)
2015-03-16 19:04 UTC, sébastien lafargue
none Details | Review
search: hide on Esc (3.05 KB, patch)
2015-03-16 19:23 UTC, sébastien lafargue
none Details | Review
search: hide on Esc (3.10 KB, patch)
2015-03-16 19:57 UTC, sébastien lafargue
committed Details | Review
search: use next-match and previous-mlatch signals (2.77 KB, patch)
2015-03-16 19:58 UTC, sébastien lafargue
committed Details | Review

Description Ignacio Casal Quinteiro (nacho) 2015-03-16 15:48:32 UTC
After upgrading f22 I can't cancel a search anymore. Pressing ESC does nothing now. I had a look at the changes in gedit-view-frame and I do not see anything relevant. Though I guess we need to bisect where this broke.
Comment 1 sébastien lafargue 2015-03-16 19:04:17 UTC
Created attachment 299544 [details] [review]
search hide on Esc hit
Comment 2 Ignacio Casal Quinteiro (nacho) 2015-03-16 19:09:44 UTC
Review of attachment 299544 [details] [review]:

Patch looks good, but I am missing some code removing no?
Comment 3 sébastien lafargue 2015-03-16 19:23:06 UTC
Created attachment 299545 [details] [review]
search: hide on Esc
Comment 4 Ignacio Casal Quinteiro (nacho) 2015-03-16 19:25:27 UTC
Review of attachment 299545 [details] [review]:

Looks good. Add the link to this bug report in the commit message though.
Comment 5 sébastien lafargue 2015-03-16 19:57:27 UTC
Created attachment 299550 [details] [review]
search: hide on Esc
Comment 6 sébastien lafargue 2015-03-16 19:58:01 UTC
Created attachment 299551 [details] [review]
search: use next-match and previous-mlatch signals
Comment 7 Ignacio Casal Quinteiro (nacho) 2015-03-16 19:58:52 UTC
Review of attachment 299551 [details] [review]:

Looks also good.
Comment 8 sébastien lafargue 2015-03-16 20:04:38 UTC
Review of attachment 299550 [details] [review]:

commited as 18cd0a0
Comment 9 sébastien lafargue 2015-03-16 20:05:07 UTC
Review of attachment 299551 [details] [review]:

commited as 611d788