search: hide when hitting Esc

Due to gtk+ API changes for GtkSearchEntry,
we now use the new stop-search signal.

https://bugzilla.gnome.org/show_bug.cgi?id=746299